# kelly_apiv1

./: .coverage  .env  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: chat.py  status.py
app/core/: config.py  exceptions.py  security.py
app/schemas/: chat.py  status.py
app/services/: embedding_service.py  history_service.py  llm_service.py  priority_context_service.py  qdrant_service.py  rag_pipeline.py
data/: priority_context.json
docs/: pyproject.md
docs/api/core/: test_config.md
docs/api/endpoints/: test_status.md
docs/app/: main.md
docs/app/api/: deps.md
docs/app/api/v1/: api.md
docs/app/api/v1/endpoints/: chat.md  status.md
docs/app/core/: config.md  exceptions.md  security.md
docs/app/schemas/: chat.md  status.md
docs/app/services/: embedding_service.md  history_service.md  llm_service.md  priority_context_service.md  qdrant_service.md  rag_pipeline.md
docs/data/: priority_context.md
docs/scripts/: run_api.md
docs/tests/: conftest.md
docs/tests/api/endpoints/: test_chat.md
kelly_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: run_api.py
tests/: conftest.py
tests/api/core/: test_config.py
tests/api/endpoints/: test_chat.py  test_status.py
